# IMCA-CustomClient

./: CLAUDE.md  LICENSE  README.md  VIDEO-PIPELINE.md  index.html  measure-fps.sh  package-lock.json  package.json  setup-competition-network.sh  v1.2
.claude/: settings.local.json
UDP-MQTT Server/proto/: messages.proto
scripts/: verify-mqtt-proto.mjs
src/: env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mqtt_client.rs  shm_bridge.rs  udp_bridge.rs  video_decoder.rs
src-tauri/src/udp_bridge/: mjpeg.rs
src-tauri/src/video_decoder/: gpu.rs
src/assets/: main.css  modals.css
src/components/: MqttCommandPanel.vue  RoboControl.vue
src/components/Dashboard/: MiniMap.vue  constants.ts  types.ts
src/store/modules/: mqtt_data.ts
src/utils/: mqtt_protocol.ts
src/views/: Dashboard.vue
